<resources>
    <string name="app_name">杭州公骑君</string>
    <string name="permission_dialog_title">感谢您的下载使用</string>
    <string name="permission_dialog_intro">为了您能正常使用，需要开启以下权限</string>
    <string name="next">下一步</string>
    <string name="network_error">网络不给力,请检查网络后重试</string>
    <string name="about_hz_bicycle_introduce">\t\t\t\t杭州公骑君 是一款面向杭州公共自行车的轻量级应用，他可以帮助你寻找附近的公共自行车租赁点的车位情况，包括查询可以租借和归还的数量等功能。</string>
    <string name="about_hz_bicycle_one_more_thing">\t\t\t\t由于 App 属于个人开发，所以可能功能并不完善，或者存在一些 Bug，欢迎使用者进行邮件反馈（回到上一级页面），我将不断完善该 App，感谢您的信任与使用。</string>

    <!-- Google Ads -->
    <string name="interstitial_ad_welcome_id">ca-app-pub-6275555609904049/8028650612</string>

    <!-- 6.0 android M 需要开启运行时异常校验 -->
    <string name="permission">权限</string>
    <string name="no_permissions">缺少必要权限</string>
    <string name="permission_settings">设置</string>
    <string name="permission_title">帮助</string>
    <string name="permission_content">缺少必要权限，是否开启？</string>
    <string name="permission_ignore">本次忽略</string>
    <string name="permission_advice_title">开启App</string>
    <string name="contract_service">联系客服</string>
    <string name="feed_back">意见反馈</string>
    <string name="about_hzbicycle">关于 杭州公骑君</string>
    <string name="offline_map">离线地图</string>
    <string name="city_hangzhou">杭州</string>
    <string name="setting_download">下载</string>
    <string name="setting_remove">删除</string>
    <string name="setting_pause">暂停</string>
    <string name="setting_continue">继续</string>
    <string name="setting_download_data_loading">%1$s/ </string>
    <string name="setting_download_all_data">%1$s MB</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_service_call">呼叫</string>
    <string name="advice">提示</string>
    <string name="dialog_remove_offline_map_content">删除后继续使用地图将需要消耗流量，是否确定删除？</string>
    <string name="requires_phone_call_permission">缺少电话相关权限，请进入 设置-应用程序-权限设置 中进行配置！</string>

    <string name="dialog_feedback_service_call_msg">&lt;font color = \'#333333\'&gt;客服热线&lt;/font&gt;&lt;br&gt;&lt;big&gt;&lt;big&gt;&lt;font color = \'#333333\'&gt;%s&lt;/font&gt;&lt;/big&gt;&lt;/big&gt;&lt;br&gt;&lt;small&gt;&lt;font color = \'#666666\'&gt;服务时间: 24小时通勤&lt;/font&gt;&lt;/small&gt;</string>
    <string name="show_github_repository">查看 Github 仓库源代码</string>
    <string name="github_repository_url">https://github.com/GavinChangCN/HZBicycle_Android</string>

    <string name="web_view_open_outside">使用系统浏览器打开网页</string>

    <!-- long click map search begin -->
    <string name="toast_long_click_map_search_content">长按地图某处试试？</string>
    <string name="dialog_long_click_map_search_content">以长按位置为中心点查找附近租赁点吗？</string>
    <!-- long click map search end -->
    <!-- search begin -->
    <string name="search_hint">请输入站点名或编号</string>
    <!-- search end -->
</resources>
