<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewMask"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMaskBackground"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="16dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBasicWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPermissionAdviceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/permission_dialog_title"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvPermissionAdviceContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/permission_dialog_intro"/>

        <LinearLayout
            android:id="@+id/lLayoutPermissionIcon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@color/colorBasicWhite"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivStoragePermission"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/drawer_ic_user_unlogin" />

            <ImageView
                android:id="@+id/ivPhonePermission"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/drawer_ic_user_login" />

            <ImageView
                android:id="@+id/ivLocationPermission"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/drawer_ic_user_unlogin" />

        </LinearLayout>

        <Button
            android:id="@+id/btnPermissionAdvice"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_button_height"
            style="@style/common_button"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/next" />

        <TextView
            android:id="@+id/tvPermissionAdviceBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="请允许使用权限" />

    </LinearLayout>

</RelativeLayout>